src/main/java/com/example/areyoup/errors/errorcode/ErrorCode.java
package com.example.areyoup.errors.errorcode;

import org.springframework.http.HttpStatus;

public interface ErrorCode {
    String name();
    HttpStatus getHttpStatus();
    String getMessage();
}
